 ** added a MountedCollectionAO to administer mounted collections and soft links 
 ** Refactoring of key classes for support
 **** CollectionAndDataObjectListAndSearchAO
 **** DataObjectAO
 **** DataTransferOperations
 **** CollectionAO
 **** IRODSFile
 **** IRODSInputStream
 **** IRODSOutputStream
 
 *  [#696] Add ticket support
 ** added compareGivenTicketToActualAndUpdateAsNeeded() method to TicketAdminService, which allows for updating an entire ticket, computing deltas and updating fields as appropriate
 ** added support to stream data via an output stream to an iRODS collection with a ticket
 
 *  [#853] IP - add ticket by admin
 ** added ability to create a ticket for another user (given that the creator is rodsAdmin)

 * [#864] 2.5 iRODS protocol errors
 ** update tests for 2.5 backwards compatability
 ** overhead misc operations to normalize errors (especially DuplicateDataException and DataNotFoundException) which are indicated
 by different iRODS error codes in 2.5 and prior.
 
 
 * [#865] factor helper classes into jargon core and remove
 ** this is a general project cleanup and simplification task.  THe testing libraries have been consolidated and placed
 into the jargon-core so that they me used by unit tests in jargon itself, as well as other projects.  This removes jargon-test as a project.
 
 * [#866] Resource Group support
 ** initial support for resource group admin and listing
 
 *  [#869] connection restart in transfer
 ** added reconnet to PipelineConfiguration and JargnProperties and added to StartupPack processing
 
 * [#878] pipeline and transfer optimization round - 3.1.3
 ** added instrument opton to PipelineConfiguration and JargonProperties to route detailed instrumentation to the DEBUG log
 
 
 [#764] Java libraries and code to integrate idrop-web
 ** added isUserInGroup method to UserGroupAO
 
 
 
 
 
 
 
 
 
 
 Notes:  
 
 -add reconn flag to startup pack in connection - see lib/core/src/sockComm.c  sendStartupPack()
 